[gd_scene load_steps=51 format=2]

[ext_resource path="res://objects/office/office.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/pov.gd" type="Script" id=2]
[ext_resource path="res://objects/main.gd" type="Script" id=3]
[ext_resource path="res://sprites/office/door/f0.png" type="Texture" id=4]
[ext_resource path="res://sprites/office/door/ee.png" type="Texture" id=5]
[ext_resource path="res://sprites/office/door/f1.png" type="Texture" id=6]
[ext_resource path="res://sprites/office/door/f2.png" type="Texture" id=7]
[ext_resource path="res://sprites/office/door/f3.png" type="Texture" id=8]
[ext_resource path="res://sprites/office/door/f4.png" type="Texture" id=9]
[ext_resource path="res://sprites/office/door/f5.png" type="Texture" id=10]
[ext_resource path="res://sprites/office/door/f6.png" type="Texture" id=11]
[ext_resource path="res://sprites/office/door/fa.png" type="Texture" id=12]
[ext_resource path="res://sprites/office/door/f7.png" type="Texture" id=13]
[ext_resource path="res://sprites/office/door/f8.png" type="Texture" id=14]
[ext_resource path="res://objects/office/doors.gd" type="Script" id=15]
[ext_resource path="res://sprites/hud/static/125.png" type="Texture" id=16]
[ext_resource path="res://sprites/cams/rhall.png" type="Texture" id=17]
[ext_resource path="res://sprites/cams/gamer.png" type="Texture" id=18]
[ext_resource path="res://sprites/cams/lhall.png" type="Texture" id=19]
[ext_resource path="res://sprites/cams/cove.png" type="Texture" id=20]
[ext_resource path="res://sprites/cams/closet.png" type="Texture" id=21]
[ext_resource path="res://sprites/cams/counter.png" type="Texture" id=22]
[ext_resource path="res://sprites/cams/funcove.png" type="Texture" id=23]
[ext_resource path="res://audio/doorFX.wav" type="AudioStream" id=24]
[ext_resource path="res://sprites/hud/static/123.png" type="Texture" id=25]
[ext_resource path="res://sprites/hud/static/126.png" type="Texture" id=26]
[ext_resource path="res://sprites/hud/static/129.png" type="Texture" id=27]
[ext_resource path="res://sprites/hud/static/117.png" type="Texture" id=28]
[ext_resource path="res://sprites/office/vdoor/181.png" type="Texture" id=53]
[ext_resource path="res://sprites/office/vdoor/17f.png" type="Texture" id=54]
[ext_resource path="res://sprites/office/vdoor/17d.png" type="Texture" id=55]
[ext_resource path="res://sprites/office/vdoor/17e.png" type="Texture" id=56]
[ext_resource path="res://sprites/office/vdoor/17b.png" type="Texture" id=57]
[ext_resource path="res://sprites/office/vdoor/17c.png" type="Texture" id=58]
[ext_resource path="res://sprites/hud/ductvent/232.png" type="Texture" id=69]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 13 ) ],
"loop": false,
"name": "play",
"speed": 60.0
} ]

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ null, ExtResource( 54 ), ExtResource( 57 ), ExtResource( 53 ), ExtResource( 58 ), ExtResource( 55 ), ExtResource( 56 ) ],
"loop": false,
"name": "play",
"speed": 60.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=48]
animations = [ {
"frames": [ ExtResource( 28 ), ExtResource( 25 ), ExtResource( 16 ), ExtResource( 26 ), ExtResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="Animation" id=49]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("campov/static:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.380392 ) ]
}

[sub_resource type="Animation" id=50]
resource_name = "resetting"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("campov/static:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.380392 ) ]
}

[sub_resource type="RectangleShape2D" id=47]

[sub_resource type="Animation" id=51]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1889, -273 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -104, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("static:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6.7234e-05, -1.57356e-05 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("static:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -104, 0 ) ]
}

[sub_resource type="Animation" id=52]
resource_name = "yeah"
length = 14.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 7, 11, 14 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -104, 0 ), Vector2( 106, 0 ), Vector2( 106, 0 ), Vector2( -104, 0 ), Vector2( -104, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("static:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4, 7, 11, 14 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -50, 0 ), Vector2( 50, 0 ), Vector2( 50, 0 ), Vector2( -50, 0 ), Vector2( -50, 0 ) ]
}

[node name="main" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ -1248.0 ]
}

[node name="blackback" type="ColorRect" parent="."]
margin_left = -1104.0
margin_top = -416.0
margin_right = 1053.0
margin_bottom = 353.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="office" parent="." instance=ExtResource( 1 )]
position = Vector2( 1, -3 )
__meta__ = {
"_edit_lock_": true
}

[node name="doors" type="Node2D" parent="."]
position = Vector2( 1, -3 )
z_index = 2
script = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="door" type="AudioStreamPlayer" parent="doors"]
stream = ExtResource( 24 )

[node name="ldoor" type="AnimatedSprite" parent="doors"]
position = Vector2( -932, 92 )
frames = SubResource( 1 )
animation = "play"

[node name="rdoor" type="AnimatedSprite" parent="doors"]
position = Vector2( 896, 92 )
frames = SubResource( 1 )
animation = "play"
flip_h = true

[node name="vdoor" type="AnimatedSprite" parent="doors"]
position = Vector2( 1148, 401 )
frames = SubResource( 20 )
animation = "play"

[node name="cameras" type="Node2D" parent="."]
z_index = 6
z_as_relative = false
__meta__ = {
"_edit_lock_": true
}

[node name="lhall" type="AnimatedSprite" parent="cameras"]
position = Vector2( -1889, -273 )
frames = SubResource( 2 )
animation = "empty"
__meta__ = {
"_edit_lock_": true
}

[node name="closet" type="AnimatedSprite" parent="cameras"]
position = Vector2( -3174, -604 )
frames = SubResource( 3 )
animation = "empty"
__meta__ = {
"_edit_lock_": true
}

[node name="cove" type="AnimatedSprite" parent="cameras"]
position = Vector2( -1893, -1026 )
frames = SubResource( 4 )
animation = "empty"
__meta__ = {
"_edit_lock_": true
}

[node name="gamer" type="AnimatedSprite" parent="cameras"]
position = Vector2( -1896, -1666 )
frames = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="rhall" type="AnimatedSprite" parent="cameras"]
position = Vector2( 1907, -268 )
frames = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="kitchen" type="AnimatedSprite" parent="cameras"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 2025, -963 )
frames = SubResource( 6 )

[node name="vent" type="AnimatedSprite" parent="cameras"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -87, -1127 )
frames = SubResource( 6 )

[node name="counter" type="AnimatedSprite" parent="cameras"]
position = Vector2( -75, -1826 )
frames = SubResource( 7 )
animation = "empty"

[node name="fcove" type="AnimatedSprite" parent="cameras"]
position = Vector2( 1959, -1661 )
frames = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="ventmap" type="Sprite" parent="cameras"]
position = Vector2( -208, -1131 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 69 )
__meta__ = {
"_edit_lock_": true
}

[node name="campov" type="Camera2D" parent="."]
position = Vector2( -1889, -273 )
z_index = 99
z_as_relative = false
offset = Vector2( -104, 0 )
zoom = Vector2( 1, 0.9 )

[node name="static" type="AnimatedSprite" parent="campov"]
self_modulate = Color( 1, 1, 1, 0.380392 )
position = Vector2( -6.7234e-05, -1.57356e-05 )
scale = Vector2( 2.12917, 1.99259 )
frames = SubResource( 48 )
frame = 2
playing = true
offset = Vector2( -104, 0 )

[node name="staticanim" type="AnimationPlayer" parent="campov"]
root_node = NodePath("../..")
anims/RESET = SubResource( 49 )
anims/resetting = SubResource( 50 )

[node name="camHitbox" type="Area2D" parent="campov"]

[node name="camHitshape" type="CollisionShape2D" parent="campov/camHitbox"]
shape = SubResource( 47 )
disabled = true

[node name="camMover" type="AnimationPlayer" parent="campov"]
anims/RESET = SubResource( 51 )
anims/yeah = SubResource( 52 )

[node name="pov" type="Camera2D" parent="."]
position = Vector2( 1, 0 )
current = true
zoom = Vector2( 1.75, 1.75 )
limit_left = -1248
limit_right = 1248
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="powerText" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="gameTimer" type="Timer" parent="."]
wait_time = 270.0
one_shot = true
autostart = true

[node name="ventpov" type="Camera2D" parent="."]
position = Vector2( -68, -1133 )
z_index = 30
zoom = Vector2( 1, 0.8 )

[connection signal="timeout" from="powerText" to="." method="_on_powerConsumption_timeout"]
[connection signal="timeout" from="gameTimer" to="." method="when6AM"]
